update gc log