@@ -1,14 +1,21 @@
-## JVM内存结构布局
+## GC log
 
-![JVM内存结构布局](/images/java/jvm03.png)
+```
+-verbose:gc
+-Xloggc:/logs/gc-%t.log
+-XX:+PrintGCDetails
+-XX:+PrintGCDateStamps
+-XX:+PrintGCCause
+-XX:+UseGCLogFileRotation
+-XX:NumberOfGCLogFiles=10
+-XX:GCLogFileSize=20M
+-XX:+PrintFlagsFinal
+-XX:+PrintTenuringDistribution
+-XX:+PrintPromotionFailure
+```
 
 ## JVM内存调整参数
 
-![JVM内存调整参数](/images/java/jvm04.png)
-
-## JVM和系统调用之间的关系
-
-![JVM和系统调用之间的关系](/images/java/jvm05.png)
-
+![JVM内存调整参数](/images/java/jvm_gc_algorithms.png)
 
 - https://github.com/jiacai2050/ideas/issues/40
